# cppLab

./: .gitignore  README.md
01_basics/: .gitignore  CMakeLists.txt
01_basics/src/: Complex.cpp  Complex.hpp  Complex_public.test.cpp  main.cpp
02_memory/: CMakeLists.txt  gol.txt  test.txt
02_memory/src/: Colony.cpp  Colony.hpp  Colony.test.cpp  GameOfLife.cpp  GameOfLife.hpp  GameOfLife.test.cpp  Visualizer.cpp  Visualizer.hpp  main.cpp
03_oo/: CMakeLists.txt
03_oo/src/: Board.cpp  Board.hpp  Cheating_player.cpp  Cheating_player.hpp  GameController.cpp  GameController.hpp  Human_player.cpp  Human_player.hpp  Main.cpp  Player.cpp  Player.hpp  Random_player.cpp  Random_player.hpp  SchiffeVersenken.cpp  Tournament.cpp  board.test.cpp  cheating_player.test.cpp  human_player.test.cpp  random_player.test.cpp  util.test.cpp  util.test.hpp
04_advanced/: CMakeLists.txt
04_advanced/src/: Numerik.cpp  Numerik.hpp  Numerik.test.cpp  Strings.cpp  Strings.hpp  Strings.test.cpp  main.cpp
05_c/: CMakeLists.txt
05_c/src/: main.c  pic32_registers.c  pic32_registers.h  registers.c  registers.h  registers.test.cpp  strings.c  strings.h  strings.test.cpp  util.strings.test.cpp  util.strings.test.hpp
